data/derived/sp14/progs/unify/prog3883.ml.out
Characters 179-180:
  else numdig :: 1
                 ^
Error: This expression has type int but an expression was expected of type
         int list
